fix typo in IWAE part

--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -226,7 +226,7 @@
    "outputs": [],
    "source": [
     "time = 100                    # num of time steps\n",
-    "n_particles = 1               # when == 1 use VAE, when > 1 use Importance Weight AutoEncoder,\n",
+    "n_particles = 1               # when == 1 use VAE, when > 1 use Importance Weighted AutoEncoder,\n",
     "                              # will be introduced later\n",
     "batch_size = 16\n",
     "\n",
@@ -807,7 +807,7 @@
    "outputs": [],
    "source": [
     "time = 100                     # num of time steps\n",
-    "n_particles = 1                # when == 1 use VAE, when > 1 use Importance Weight AutoEncoder,\n",
+    "n_particles = 1                # when == 1 use VAE, when > 1 use Importance Weighted AutoEncoder,\n",
     "                               # will be introduced later\n",
     "batch_size = 16\n",
     "\n",
@@ -1248,7 +1248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importance Weight Auto-Encoder (IWAE)\n",
+    "## Importance Weighted Auto-Encoder (IWAE)\n",
     "\n",
     "<img src=\"doc_imgs/IWAE.png\" alt=\"Drawing\" style=\"width: 1500px\"/>"
    ]
@@ -1377,7 +1377,7 @@
     "Through iteration of Box's loop, our project shows the following:\n",
     "* The Variational Recurrent Neural Network can be used for accurate predictions.\n",
     "* Learning the initial state for VRNN with bidirectional RNN can improve prediction accuracy.\n",
-    "* Importance Weight Auto-Encoder can be a promising technique to merge into VRNN.\n",
+    "* Importance Weighted Auto-Encoder can be a promising technique to merge into VRNN.\n",
     "\n",
     "The encouraging results of VRNN and remained unfinished experiments on IWAE motive our group to look further into this topic. \n",
     "* We would apply IWAE to stock data and check how the performance improves as number of samples $k$ increases.\n",
